moved some files + added another regression

--- a/9_new_regressions.Rmd
+++ b/9_new_regressions.Rmd
@@ -14,16 +14,22 @@ library(janitor)
 ```
 
 ```{r}
+
 # Reading in actual recent data
 
 most_recent <- readRDS('most_recent_zip_nobanks_1118.rds') %>%
-  mutate(log_days = log(business_days + 1))
+  mutate(log_days = log(business_days + 1)) %>%
+  mutate(fips = as.factor(fips), lender = as.factor(lender))
 
-most_recent_county <- readRDS('most_recent_county_nobanks_1118.rds')
+most_recent_county <- readRDS('most_recent_county_nobanks_1118.rds') %>%
+  mutate(lender = as.factor(lender))
+
+# Reading most_recent_both later
+
 ```
 
 ```{r}
-#most_recent <- readRDS('most_recent_zip_1117.rds')
+# most_recent <- readRDS('most_recent_zip_1117.rds')
 
 # Adding in FIPS to county
 
@@ -31,7 +37,8 @@ most_recent <- readRDS('most_recent_zip_1117.rds')
 
 # most_recent <- readRDS('most_recent_zip_nobanks_1118.rds')
 
-zip_county_crosswalk <- read_excel('raw_data/crosswalks/ZIP_COUNTY_092020.xlsx') %>%
+zip_county_crosswalk <- 
+  read_excel('raw_data/crosswalks/ZIP_COUNTY_092020.xlsx') %>%
   clean_names() %>%
   select(zip, county, res_ratio) %>%
   group_by(zip) %>%
@@ -46,7 +53,8 @@ most_recent_2 <- left_join(most_recent, zip_county_crosswalk, by = "zip")
 
 
 ```{r}
-# adding in county level data to the ZIP for robustness check
+# adding in county level data to the ZIP for robustness check -- this has all
+# been done already so scroll down to the regressions
 
 # Crime
 
@@ -225,7 +233,7 @@ covid <- felm(
     non_essential_closure_current|lender|0|zip + state,
   data = most_recent)
 
-# Take out state clustering here if necessary
+# Take out state clustering here if necessary -- update 11/24 taken out
 
 covid_fe <- felm(
   business_days ~ 1 + 
@@ -256,10 +264,45 @@ covid_fe <- felm(
     stay_at_home_apr + 
     stay_at_home_current + 
     non_essential_closure_apr + 
-    non_essential_closure_current|fips + lender|0|zip + state,
+    non_essential_closure_current|fips + lender|0|zip,
   data = most_recent)
 
-# Regression 5: interactions
+# Regression 5: Squared
+
+sq <- felm(
+  business_days ~ 1 + 
+    median_family_income + 
+    minority_percent +
+    high_school_pct + 
+    married_percent + male_percent + 
+    cook_pvi + 
+    rural +
+    estimate_gini_index +
+    violent_crime_rate + 
+    delay +
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    payroll +
+    unemployment_rate_apr + 
+    unemployment_rate + 
+    mean_start_cases_weighted +
+    mean_start_deaths_weighted + 
+    mean_end_cases_weighted +
+    mean_end_deaths_weighted + 
+    stay_at_home_apr + 
+    stay_at_home_current + 
+    non_essential_closure_apr + 
+    non_essential_closure_current +
+    I(minority_percent^2)|fips + lender|0|zip,
+  data = most_recent)
+
+# Regression 6: interactions
 
 interactions <- felm(
   business_days ~ 1 + 
@@ -296,12 +339,18 @@ interactions <- felm(
     I(minority_percent * cook_pvi) +
     I(minority_percent * rural) + 
     I(minority_percent * estimate_gini_index) +
-    I(minority_percent * violent_crime_rate)|fips + lender|0|zip + state,
+    I(minority_percent * violent_crime_rate)|fips + lender|0|zip,
   data = most_recent)
 
 ```
 
 ```{r}
+
+
+# county data
+
+most_recent_both <- readRDS('most_recent_zip_withcounties_nobanks_1118.rds') %>%
+  mutate(zip = as.factor(zip), fips = as.factor(fips))
 
 # Robustness check -- rerunning regressions with the lovely local data
 
@@ -395,7 +444,42 @@ covid_check <- felm(
     non_essential_closure_current|lender|0|zip + fips,
   data = most_recent_both)
 
-# Regression 5: interactions
+# Regression 5: squared
+
+sq_check <- felm(
+  business_days ~ 1 + 
+    median_family_income + 
+    minority_percent +
+    high_school_pct + 
+    married_percent + male_percent + 
+    cook_pvi + 
+    rural +
+    estimate_gini_index +
+    county_crime_rate + 
+    delay +
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    payroll +
+    county_unemployment_rate_apr + 
+    county_unemployment_rate + 
+    mean_start_cases +
+    mean_start_deaths + 
+    mean_end_cases +
+    mean_end_deaths + 
+    stay_at_home_apr + 
+    stay_at_home_current + 
+    non_essential_closure_apr + 
+    non_essential_closure_current +
+    I(minority_percent^2)|lender|0|zip + fips,
+  data = most_recent_both)
+
+# Regression 6: interactions
 
 interactions_check <- felm(
   business_days ~ 1 + 
@@ -534,6 +618,41 @@ county_covid <- felm(business_days ~ 1 +
     non_essential_closure_current|lender|0|fips, 
     data = most_recent_county
 )
+
+county_sq <- felm(business_days ~ 1 + 
+    median_income + 
+    minority_percent +
+    
+    high_school_pct + 
+    married_percent + male_percent + 
+    republican_percent + 
+    pop_den +
+    estimate_gini_index +
+    violent_crime_rate +
+    delay +
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    gdp +
+    unemployment_rate_apr + 
+    unemployment_rate_percent +
+    mean_start_cases +
+    mean_start_deaths + 
+    mean_end_cases +
+    mean_end_deaths + 
+    stay_at_home_apr + 
+    stay_at_home_current + 
+    non_essential_closure_apr + 
+    non_essential_closure_current +
+    I(minority_percent^2)|lender|0|fips, 
+    data = most_recent_county
+)
+
 
 county_interactions <- felm(business_days ~ 1 + 
     median_income + 
@@ -763,7 +882,97 @@ covid_binomial <-  fenegbin(business_days ~ 1 +
 ```{r}
 # Trying log again just to see what will happen
 
-log_covid <- felm(log_days ~ 
+# Regression 1
+
+log_demographics <- felm(log_days ~ 1 + 
+    median_family_income + 
+    minority_percent +
+    high_school_pct + 
+    married_percent + male_percent + 
+    male_percent + 
+    cook_pvi + 
+    rural +
+    estimate_gini_index +
+    violent_crime_rate|0|0|zip, data = most_recent)
+
+# Regression 2: Demographics and Loan-Specific
+
+log_loan_spec <- felm(
+  log_days ~ 1 + 
+    median_family_income + 
+    minority_percent +
+    high_school_pct + 
+    married_percent + male_percent + 
+    cook_pvi + 
+    rural +
+    estimate_gini_index +
+    violent_crime_rate + 
+    delay + 
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported|lender|0|zip, data = most_recent)
+
+# Regression 3: economics
+
+log_econ <- felm(
+  log_days ~ 1 + 
+    median_family_income + 
+    minority_percent +
+    high_school_pct + 
+    married_percent + male_percent + 
+    cook_pvi + 
+    rural +
+    estimate_gini_index +
+    violent_crime_rate + 
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    delay +
+    jobs_reported +
+    banks_per_pop + 
+    businesses_per_pop + 
+    payroll +
+    unemployment_rate_apr + 
+    unemployment_rate|lender|0|zip, data = most_recent)
+
+
+log_covid_1 <- felm(log_days ~ 
+                    1 + 
+    median_family_income + 
+    minority_percent +
+    high_school_pct + 
+    married_percent + male_percent + 
+    cook_pvi + 
+    rural +
+    estimate_gini_index +
+    violent_crime_rate +
+    delay + 
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported + 
+    banks_per_pop + 
+    businesses_per_pop + 
+    payroll +
+    unemployment_rate_apr + 
+    unemployment_rate +
+    mean_start_cases_weighted +
+    mean_start_deaths_weighted + 
+    mean_end_cases_weighted +
+    mean_end_deaths_weighted +
+    stay_at_home_apr + 
+    stay_at_home_current + 
+    non_essential_closure_apr + 
+    non_essential_closure_current|lender|0|zip, data = most_recent)
+
+log_covid_2 <- felm(log_days ~ 
                     1 + 
     median_family_income + 
     minority_percent +
@@ -825,6 +1034,45 @@ log_interactions_test <- felm(log_days ~
     non_essential_closure_apr + 
     non_essential_closure_current + 
       I(minority_percent^2)|lender + fips|0|zip, data = most_recent)
+
+log_interactions <- felm(log_days ~ 
+                    1 + 
+    median_family_income + 
+    minority_percent +
+    high_school_pct + 
+    married_percent + male_percent + 
+    cook_pvi + 
+    rural +
+    estimate_gini_index +
+    violent_crime_rate +
+    delay + 
+    loan_150_350 +
+    loan_350_1mil +
+    loan_1mil_2mil +
+    loan_2mil_5mil + 
+    loan_5mil_10mil + 
+    jobs_reported + 
+    banks_per_pop + 
+    businesses_per_pop + 
+    payroll +
+    unemployment_rate_apr + 
+    unemployment_rate +
+    mean_start_cases_weighted +
+    mean_start_deaths_weighted + 
+    mean_end_cases_weighted +
+    mean_end_deaths_weighted +
+    stay_at_home_apr + 
+    stay_at_home_current + 
+    non_essential_closure_apr + 
+    non_essential_closure_current + 
+      I(minority_percent^2) +
+      I(minority_percent^2) + 
+    I(minority_percent * median_family_income) +
+    I(minority_percent * cook_pvi) +
+    I(minority_percent * rural) + 
+    I(minority_percent * estimate_gini_index) +
+    I(minority_percent * violent_crime_rate)|lender + fips|0|zip, 
+    data = most_recent)
 ```
 
 
